--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Escanner</string>
-    <string name="barcode_value">Barcode Value: %1$s</string>
+    <string name="barcode_value">Codigo: %1$s</string>
 </resources>
